[NEW] Region "Bern" (will be in version 9) closes #18

--- a/SimRa/de.lproj/constants.plist
+++ b/SimRa/de.lproj/constants.plist
@@ -8,6 +8,7 @@
 		<string>Berlin</string>
 		<string>London</string>
 		<string>Anderswo</string>
+		<string>Bern</string>
 	</array>
 	<key>locales</key>
 	<array>
