--- a/SimRa/Base.lproj/constants.plist
+++ b/SimRa/Base.lproj/constants.plist
@@ -8,6 +8,7 @@
 		<string>Berlin</string>
 		<string>London</string>
 		<string>Other</string>
+		<string>Bern</string>
 	</array>
 	<key>locales</key>
 	<array>
