[FIX] iOS13 Dark Mode

--- a/artwork/Makefile
+++ b/artwork/Makefile
@@ -7,6 +7,12 @@ all: \
 	racing-flag-48.png \
 	racing-flag-48@2x.png \
 	racing-flag-48@3x.png \
+	start-48-negate.png \
+	start-48-negate@2x.png \
+	start-48-negate@3x.png \
+	racing-flag-48-negate.png \
+	racing-flag-48-negate@2x.png \
+	racing-flag-48-negate@3x.png \
 
 start-48.png:start.png
 	$(IMAGEW) -w 48 -h 48 $< $@
@@ -25,3 +31,21 @@ racing-flag-48@2x.png:racing-flag.png
 
 racing-flag-48@3x.png:racing-flag.png
 	$(IMAGEW) -w 144 -h 144 $< $@
+
+start-48-negate.png:start-48.png
+	$(IMAGEW) -negate $< $@
+
+start-48-negate@2x.png:start-48@2x.png
+	$(IMAGEW) -negate $< $@
+
+start-48-negate@3x.png:start-48@3x.png
+	$(IMAGEW) -negate $< $@
+
+racing-flag-48-negate.png:racing-flag-48.png
+	$(IMAGEW) -negate $< $@
+
+racing-flag-48-negate@2x.png:racing-flag-48@2x.png
+	$(IMAGEW) -negate $< $@
+
+racing-flag-48-negate@3x.png:racing-flag-48@3x.png
+	$(IMAGEW) -negate $< $@
