fixed merge issues

--- a/SimRa.xcodeproj/xcshareddata/xcschemes/SimRa.xcscheme
+++ b/SimRa.xcodeproj/xcshareddata/xcschemes/SimRa.xcscheme
@@ -80,8 +80,8 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <LocationScenarioReference
-         identifier = "../berlin.gpx"
-         referenceType = "0">
+         identifier = "London, England"
+         referenceType = "1">
       </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
