preparing for update

--- a/SimRa/SupportingFiles/Info.plist
+++ b/SimRa/SupportingFiles/Info.plist
@@ -30,6 +30,12 @@
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>Diese App benötigt die Erlaubnis, auf Ihr Geräte-Bluetooth zuzugreifen, um sich mit openBikeSensor zu verbinden.
 </string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Diese App benötigt die Erlaubnis, auf Ihr Geräte-Bluetooth zuzugreifen, um sich mit openBikeSensor zu verbinden.
+Diese App benötigt die Erlaubnis, auf Ihr Geräte-Bluetooth zuzugreifen, um sich mit openBikeSensor zu verbinden.
+Diese App benötigt die Erlaubnis, auf Ihr Geräte-Bluetooth zuzugreifen, um sich mit openBikeSensor zu verbinden.
+Diese App benötigt die Erlaubnis, auf Ihr Geräte-Bluetooth zuzugreifen, um sich mit openBikeSensor zu verbinden.
+</string>
 	<key>NSLocationUsageDescription</key>
 	<string>Diese App benötigt den Zugriff auf deine Standortdaten, um dich auf der Karte anzuzeigen und deine Fahrt zu speichern.
 This app needs permission to access your location data in order to show you your location on the map and to record your rides.</string>
