[FIX] Visibility of Start/Stop Buttons #73

--- a/SimRa/SupportingFiles/Info.plist
+++ b/SimRa/SupportingFiles/Info.plist
@@ -56,6 +56,8 @@ This app needs permission to access your location data in order to show you your
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string></string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -69,7 +71,5 @@ This app needs permission to access your location data in order to show you your
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UIUserInterfaceStyle</key>
-	<string>Light</string>
 </dict>
 </plist>
